--- a/1week/1.1.PO_개요.md
+++ b/1week/1.1.PO_개요.md
@@ -1,11 +1,13 @@
-#### 1주차 교육 _1
+#### 1주차 교육 
 - 날짜 : 2/22
 - 시간 : 50분
 - 담당 : 김창현 부장
 
-#### 내용 
+#### 내용 요약 
 - Perfone 개념 및 전체 개요 
 - 메뉴얼 1장 내용 진행
 
 
 
+#### 세부내용
+- 주요제품 : 
