--- a/1week/1.1.PO_개요.md
+++ b/1week/1.1.PO_개요.md
@@ -10,4 +10,11 @@
 
 
 #### 세부내용
-- 주요제품 : 
+- 주요 제품 : 
+    - 로드러너: 시장점유율 높음, hp제품 
+    - Jmeter: 오픈소스 프로젝트
+- 고객사:
+    - S&J 테스트
+
+#### 전달사항
+- performance-test 시장의 주요 제품 과 perfone 비교하기.
