--- a/1week/1.2.PO_설치_및_실행.md
+++ b/1week/1.2.PO_설치_및_실행.md
@@ -31,7 +31,7 @@
 
 - 용어정리
     + 트랜잭션 - 액션들의 묶음 단위
-    + 피들러 - 자동레코딩실행시 패킷을 스니핑하는 프로그램
+    + 피들러 - 자동레코딩실행시 프록시-패킷을 스니핑하는 프로그램
 
 - TIP
     + 사용해볼만한 오픈 프로젝트 : intellij, jmeter
