--- a/1week/1.2.PO_설치_및_실행.md
+++ b/1week/1.2.PO_설치_및_실행.md
@@ -24,7 +24,7 @@
 - Perfone 폴더구조 이해
     + 최신 버전 폴더위치 :: C:\PerfOne\3.0b
         - 최신 버전 폴더위치는 Perfone 폴더 내부에 별도로 속해 있다.
-        - 라이센스 파일의 경우, 최신버젼 폴더가아닌, 메일 폴더에 넣어야 정상동작한다.
+        - 라이센스 파일의 경우, 최신버젼 폴더가아닌, 메인 폴더에 넣어야 정상동작한다.
 
 - 스크립트 레코더 실행 방법 :
     + 레코더 실행 > 파일 > 새로만들기
