--- a/1week/1.3.PO_실행_및_결과분석.md
+++ b/1week/1.3.PO_실행_및_결과분석.md
@@ -50,5 +50,13 @@
 이슈1: ping 이 안될때 해결
  - https://syuda.tistory.com/80
  
+ ```html
+[ 참고 ]
+- 제어판 open : [윈도우 + R] & [control 입력] & [ 제어판 작은아이콘으로 보기 설정 ]
+- windows defender 방화벽 open : [고급설정 클릭] & [인바운드 규칙 클릭] & [파일 및 프린터 공유 & 우클릭 & 규칙사용 클릭 ]
+- [완료] & [ping이 되는지 확인]
+
+```
+
 이슈2: 윈도우 업데이트 완료함
 이슈3: 배포 완료후 마지막 단계에서 진행 못함
