--- a/1week/1.3.PO_실행_및_결과분석1.md
+++ b/1week/1.3.PO_실행_및_결과분석1.md
@@ -39,7 +39,7 @@
 - 테스트 시작전에 에이전트를 실행해줘야함
 - 에이전트를 실행하기 위해선, 
 1. C:\PerfOneAgent\Agent_Node => 커맨드 실행
-2. cmd> start_agent.bat yhlee@10.30.1.27
+2. cmd> start_agent.bat yhlee@10.30.1.27/10.30.1.8
 3. 위의 실행을 하면 에이전트가 실행된다.
 ```
 
