--- a/2week/2.1.PO_성능_측정시_충돌문제_해결방법.md
+++ b/2week/2.1.PO_성능_측정시_충돌문제_해결방법.md
@@ -13,14 +13,14 @@ C:\PerfOne\PerfOne-Deps\script-examples\replace_data_source
 ```erlang
 put(length_info, {1, 2, big_header}),
 replace_data_source:set_unique("gridcsv.csv"),
-replace_data_source:when_out_of_values("gridcsv.csv,restart),
+replace_data_source:when_out_of_values("gridcsv.csv",restart),
 next.
 ```
 - 트랜잭션:id,pwd
 ```erlang
 replace_data_source:fetch_next_row("gridcsv.csv"),
-id = replace_date_source:get_value("ID","gridcsv.csv"),
-pwd = replace_date_source:get_value("PWD","gridcsv.csv"),
+id = replace_data_source:get_value("ID","gridcsv.csv"),
+pwd = replace_data_source:get_value("PWD","gridcsv.csv"),
 ```
 
 - 로그인:post
@@ -32,3 +32,7 @@ pwd = replace_date_source:get_value("PWD","gridcsv.csv"),
 
 
 
+#### 중요한 3가지 사항
+- 중복 작업을 제거하기 위해 unique 데이터 할당
+- PO는 성능 측정기이다, 기능 측정목적이 아니다.
+- 치환데이터 설정 방법 이해하기
