--- a/2week/2.3.PO_사용자_메뉴얼_4장_스크립트_작성.md
+++ b/2week/2.3.PO_사용자_메뉴얼_4장_스크립트_작성.md
@@ -8,7 +8,7 @@
 ##### 4장 스크립트 작성
 - PERFONE의 성능 측정 대상은 웹서버 뿐만아니라, 일반 서버까지 아우른다.
 - 코릴레이션 개념 : 트랜잭션의 결과를 다음 트랜잭션으로 전달하여 진행
-- l4스위치 : PO 서버에서  
+- l4스위치 : 밸런스 로더 역활을 하는데, 만약 한쪽 서버에만 과부하가 걸리게 된다면, 통신쪽 문제일수도 있다. 이런경우, 통신사에 l4스위치의 설정이 밸런스 로더 역활에 맞게 설정 되어있는지 확인 필요.
 
 ##### PO개선사항
 - 더티체크: 내용 수정 후 적용 버튼 클릭하지 않을 경우 알림창 띄우도록 사용자 경험 개선
