--- a/2week/2.3.PO_사용자_메뉴얼_4장_스크립트_작성.md
+++ b/2week/2.3.PO_사용자_메뉴얼_4장_스크립트_작성.md
@@ -1,4 +1,4 @@
-#### 1주차 교육 
+#### 2주차 교육 
 - 날짜 : 3/4
 - 시간 : 70분
 - 담당 : 김창현 부장
@@ -9,6 +9,14 @@
 - PERFONE의 성능 측정 대상은 웹서버 뿐만아니라, 일반 서버까지 아우른다.
 - 코릴레이션 개념 : 트랜잭션의 결과를 다음 트랜잭션으로 전달하여 진행
 - l4스위치 : 밸런스 로더 역활을 하는데, 만약 한쪽 서버에만 과부하가 걸리게 된다면, 통신쪽 문제일수도 있다. 이런경우, 통신사에 l4스위치의 설정이 밸런스 로더 역활에 맞게 설정 되어있는지 확인 필요.
+- 랑데부 기능: 랑데부기능은 시험의 트랜잭션 또는 시험 시나리오의 특정 시점에 지정한 가상사용
+자가 동시에 수행하도록 하는 기능입니다. 시험 사이클을 수행하고 난 후 다시 반복하
+여 수행시, 동시에 시작한 가상 사용자는 같은 시각에서 같이 시험을 수행하는 기능
+(즉, 일부 가상사용자가 업무수행이 종료되지 않았다면, 기 수행 완료한 가상사용자는
+다른 미 수행한 가상사용자가 시험을 수행할 때까지 대기하였다가 동시에 다시 시작한
+다.)
+
+
 
 ##### PO개선사항
 - 더티체크: 내용 수정 후 적용 버튼 클릭하지 않을 경우 알림창 띄우도록 사용자 경험 개선
